# opengl-raymarcher

./: .gitignore  CMakeLists.txt  Makefile  README.md  game  main.cpp  project.org  shader.cpp  shader.hpp  test.glsl
glad/: glad.h
include/: shader.hpp
include/glad/: glad.h
src/: Makefile_old  camera.cpp  camera.hpp  glad.c  main.cpp  shader.cpp  shader.hpp  test.glsl
